Adjusting speeds for faster arm in autonomous, making the right side clearly symetrical with the left. Removing unused score commands